# PotBot-HMI

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
